<resources>
    <!-- Common -->
    <string name="app_name">Air Quaility Gijón</string>
    <string name="ok">OK</string>

    <!-- activity_login -->
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_error">Invalid credentials</string>
    <string name="debug_add" translatable="false">Add user</string>
    <string name="debug_remove" translatable="false">Remove user</string>
    <string name="debug_remove_all" translatable="false">Remove ALL users</string>

    <!-- menu_main -->
    <string name="menu_refresh">Refresh data</string>
    <string name="menu_info">Air quality levels info…</string>
    <string name="menu_about">About \'Air Quality Gijón\' app…</string>
    <string name="menu_info_alert_dialog_title">Air quality levels info</string>
    <string name="menu_info_alert_dialog_message">
        - Dark Green Circle: Very Good\n- Light Green Circle: Good\n- Yellow Circle: Bad\n- Red Circle: Very Bad\n
        \nThe total air quality level is the same one that the worst level of a single compound.
        That means that if, for example, every compound has a \'very good\' level but one has a \'very bad\' one the total air quality is \'very bad\'.\n
        \nIf the level of a given compound is \'bad\' that means that, according to the data provided by the city council, it is over the safe limits for health.
    </string>
    <string name="menu_about_alert_dialog_title">About \'Air Quality Gijón\' app</string>
    <string name="menu_about_alert_dialog_message">App designed and implemented by Alejandro Martínez Remis.\n\nData provided by the City Council of Gijón (Asturias, Spain).</string>
    <string name="alert_dialog_fetch_data_error_title">Error</string>
    <string name="alert_dialog_fetch_data_error_message">There has been an error fetching the data from the stations. Please, verify that you have proper Internet connection or try again later.</string>

    <!-- activity_main -->
    <string name="loading">Retrieving latest hour data…</string>
    <string name="station_avenida_constitucion" translatable="false">Avenida Constitución</string>
    <string name="station_avenida_argentina" translatable="false">Avenida Argentina</string>
    <string name="station_montevil" translatable="false">Montevil</string>
    <string name="station_hermanos_felgueroso" translatable="false">Hermanos Felgueroso</string>
    <string name="station_avenida_castilla" translatable="false">Avenida Castilla</string>
    <string name="station_santa_barbara" translatable="false">Santa Bárbara</string>
    <string name="station_unknown">Unknown Station</string>

    <!-- activity_station -->
    <string name="date">Date</string>
    <string name="so2">Sulfur dioxide (SO2)</string>
    <string name="no">Nitrogen monoxide (NO)</string>
    <string name="no2">Nitrogen dioxide (NO2)</string>
    <string name="co">Carbon monoxide (CO)</string>
    <string name="pm10">Suspended particles smaller than 10 µm</string>
    <string name="o3">Ozone (O3)</string>
    <string name="dd">Wind Direction</string>
    <string name="vv">Wind Speed</string>
    <string name="tmp">Temperature</string>
    <string name="hr">Relative Humidity</string>
    <string name="prb">Pressure</string>
    <string name="rs">Solar Irradiance</string>
    <string name="ll">Precipitation</string>
    <string name="ben">Benzene (C6H6)</string>
    <string name="tol">Toluene (C7H8)</string>
    <string name="mxil">Meta-xylene (C8H10)</string>
    <string name="pm25">Suspended particles smaller than 2,5 µm</string>

    <string name="unit_micro" translatable="false">μg/m³</string>
    <string name="unit_milli" translatable="false">mg/m³</string>
    <string name="temperature_unit" translatable="false">ºC</string>
    <string name="humidity_unit" translatable="false">%</string>
    <string name="pressure_unit" translatable="false">hPa</string>
    <string name="wind_direction_unit" translatable="false">º</string>
    <string name="wind_speed_unit" translatable="false">km/h</string>
    <string name="solar_radiation_unit" translatable="false">W/m²</string>
    <string name="precipitation_unit" translatable="false">l/m²</string>

    <string name="air_quality">Air quality</string>
    <string name="air_quality_very_good">Very Good</string>
    <string name="air_quality_good">Good</string>
    <string name="air_quality_bad">Bad</string>
    <string name="air_quality_very_bad">Very Bad</string>
    <string name="air_quality_unknown">Unknown</string>

    <string name="location">Location</string>
    <string name="location_message">Press here to see it in Google Maps</string>

    <!-- Wind Direction -->
    <string name="north">N</string>
    <string name="north_east">NE</string>
    <string name="east">E</string>
    <string name="south_east">SE</string>
    <string name="south">S</string>
    <string name="south_west">SW</string>
    <string name="west">W</string>
    <string name="north_west">NW</string>

    <!-- activity_settings -->
    <string name="settings">Settings</string>
    <string name="settings_notifications_receive">Receive notifications about air quality</string>
    <string name="settings_notifications_frequency">Notification frequency</string>
    <string name="settings_notifications_stations">Stations included in the notification</string>
    <string name="settings_notifications_air_quality">Air quality levels included in the notification</string>
    <string-array name="air_quality_levels">
        <item>Any quality level</item>
        <item>Only air quality levels that are below safe limits</item>
    </string-array>
    <string-array name="notification_frequency">
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
        <item>Every 24 hours</item>
        <item>[TEST] As soon as possible</item> <!--TODO: Remove this-->
    </string-array>

    <!-- activity_settings -->
    <string name="notification_title">Latest info:</string>
    <string name="channel_name">Air quality levels notifications</string>
    <string name="channel_description">This channel is used to send periodic notifications about the latest info of the air quality levels configured by the user.</string>
</resources>