<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_login"
        android:importantForAccessibility="no"/>

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewLoginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/login_error"
        android:textColor="@color/red_light"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/login" />

    <LinearLayout
        android:id="@+id/layoutDebugButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/buttonDebugAddUser"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickDebugAdd"
            android:text="@string/debug_add" />

        <Button
            android:id="@+id/buttonDebugRemoveUser"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onClickDebugRemoveUser"
            android:text="@string/debug_remove" />

        <Button
            android:id="@+id/buttonDebugRemoveAll"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickDebugRemoveAllUsers"
            android:text="@string/debug_remove_all" />

    </LinearLayout>

</LinearLayout>